--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,9 +12,13 @@
     <%= f.text_field :username, autocomplete: "username" %>
   </div>
   <div class="field">
-    <%= f.label :skintone_id %><br />
-    <%= f.text_field :skintone_id, autocomplete: "skintone_id" %>
+    <%#= f.label :skintone_id %><br />
+    <%#= f.text_field :skintone_id, autocomplete: "skintone_id" %>
+     <%= f.select :skintone_id, options_for_select([["Light", 1], ["Medium", 2],["Dark",3]]) %>
   </div>
+  
+
+  
 
   <div class="field">
     <%= f.label :password %>
