--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,6 +25,16 @@
           </div>
         </li>
       </ul>
+      
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <a href="/products" class="nav-link">
+              
+              Browse Products
+              
+            </a>
+          </li>
+      </ul>
 
       
       <ul class="navbar-nav">
