--- a/app/views/photo_templates/index.html.erb
+++ b/app/views/photo_templates/index.html.erb
@@ -2,6 +2,13 @@
   Get Inspired!
 </h1>
 
+<br>
+<div class="btn-group" role="group">
+  <a href="/photos"><button type="button" class="btn btn-info">All Skintones</button></a>
+  <a href="/my_skintone"><button type="button" class="btn btn-outline-info">My Skintone</button></a>
+</div>
+
+
 <hr>
 
 <div class="row">
