--- a/app/views/product_templates/show.html.erb
+++ b/app/views/product_templates/show.html.erb
@@ -1,50 +1,68 @@
 <h1>
-  Product #<%= @product.id %> details
+  <%=@product.full_product %>
 </h1>
+
+<br>
+<div class="btn-group" role="group">
+  <a href="/products/<%=@product.id%>"><button type="button" class="btn btn-info">All Skintones</button></a>
+  <a href="/products/<%=@product.id%>/my_skintone"><button type="button" class="btn btn-outline-info">My Skintone</button></a>
+</div>
+
+
+<hr>
+
+
+<div class="row">
+<% Photo.where({ :product_id => @product.id}).each do |photo| %>
+    <div class="col-md-4 mb-3"> 
+        <div class="card" style ="height: 100%;">
+          <img class="card-img-top" src="<%=photo.image%>">
+          <div class="card-body">
+            <!--<p class="card-text">-->
+              
+              <%if Like.exists?({ :user_id => current_user.id, :product_id => photo.product_id}) %> 
+                  <div>
+                  <a href="/delete_like/<%= Like.where({ :user_id => current_user.id, :product_id => photo.product_id}).first.id %>">
+                      <i class="fas fa-trash"></i> Remove from Wishlist
+                  </a>
+                  </div>
+              <% else %> 
+                  <div>
+                  <form action="/create_like" method="post">
+                      <input type="hidden" name="user_id" value="<%= current_user.id %>">
+                      <input type="hidden" name="product_id" value="<%= photo.product_id %>">
+                    <button type="submit" class="btn btn-link"><i class="far fa-heart"></i> Add to Wishlist</button>
+                  </form>
+                  </div>
+              <%end%>
+              
+              <br>
+
+              <a href = "/users/<%=photo.user_id%>" class="text-primary">
+              <strong><%=User.find(photo.user_id).username.titlecase%></strong>
+              </a>
+              
+              <a href = "/products/<%=photo.product_id%>" class="text-muted"> 
+                <%= Product.find(photo.product_id).brand %> 
+                <%= Product.find(photo.product_id).item %>
+                <%= Product.find(photo.product_id).shade %>
+              </a>    
+                  
+          </div>
+      </div>
+    </div>
+<% end %> 
+</div>
+
+
+          
+          
+          
 
 <a href="/products/<%= @product.id %>/edit">
   Edit product
 </a>
-
-<hr>
-
-<dl>
-  <dt>
-    Brand
-  </dt>
-  <dd>
-    <%= @product.brand %>
-  </dd>
-
-  <dt>
-    Item
-  </dt>
-  <dd>
-    <%= @product.item %>
-  </dd>
-
-  <dt>
-    Shade
-  </dt>
-  <dd>
-    <%= @product.shade %>
-  </dd>
-
-  <dt>
-    Created at
-  </dt>
-  <dd>
-    <%= time_ago_in_words(@product.created_at) %> ago
-  </dd>
-
-  <dt>
-    Updated at
-  </dt>
-  <dd>
-    <%= time_ago_in_words(@product.updated_at) %> ago
-  </dd>
-</dl>
-
+<br>
 <a href="/delete_product/<%= @product.id %>">
   Delete product
 </a>
