--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,21 +9,14 @@
     </button>
 
     <div class="collapse navbar-collapse" id="collapsible-nav-links">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Swatches
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a href="/photos" class="dropdown-item">
-              All Skintones
+     <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <a href="/photos" class="nav-link">
+              
+              Browse Swatches
+              
             </a>
-            <a href="/my_skintone" class="dropdown-item">
-              My Skintone
-            </a>
-            
-          </div>
-        </li>
+          </li>
       </ul>
       
       <ul class="navbar-nav mr-auto">
