--- a/app/views/user_templates/show.html.erb
+++ b/app/views/user_templates/show.html.erb
@@ -29,29 +29,49 @@
   
 </dl>
 <hr>
-
+<div class="row">
 <% Photo.where({:user_id => @user.id}).each do |photo| %>
 
-    <div class="card mb-3" style="width: 20rem;">
-      <img class="card-img-top" src="<%=photo.image%>">
-      <div class="card-body">
-        <p class="card-text text-center">
-          <a href = "/users/<%=photo.user_id%>" class="text-primary">
-          <%=User.find(photo.user_id).username.titlecase%>
-          </a>
-          
-          <a href = "/products/<%=photo.product_id%>" class="text-muted"> 
-            <%= Product.find(photo.product_id).brand %> 
-            <%= Product.find(photo.product_id).item %>
-            <%= Product.find(photo.product_id).shade %>
-          </a>
-          
-        </p>
+    <div class="col-md-4 mb-3"> 
+        <div class="card" style ="height: 100%;">
+          <img class="card-img-top" src="<%=photo.image%>">
+          <div class="card-body">
+            <!--<p class="card-text">-->
+              
+              <%if Like.exists?({ :user_id => current_user.id, :product_id => photo.product_id}) %> 
+                  <div>
+                  <a href="/delete_like/<%= Like.where({ :user_id => current_user.id, :product_id => photo.product_id}).first.id %>">
+                      <i class="fas fa-trash"></i> Remove from Wishlist
+                  </a>
+                  </div>
+              <% else %> 
+                  <div>
+                  <form action="/create_like" method="post">
+                      <input type="hidden" name="user_id" value="<%= current_user.id %>">
+                      <input type="hidden" name="product_id" value="<%= photo.product_id %>">
+                    <button type="submit" class="btn btn-link"><i class="far fa-heart"></i> Add to Wishlist</button>
+                  </form>
+                  </div>
+              <%end%>
+              
+              <br>
+
+              <a href = "/users/<%=photo.user_id%>" class="text-primary">
+              <strong><%=User.find(photo.user_id).username.titlecase%></strong>
+              </a>
+              
+              <a href = "/products/<%=photo.product_id%>" class="text-muted"> 
+                <%= Product.find(photo.product_id).brand %> 
+                <%= Product.find(photo.product_id).item %>
+                <%= Product.find(photo.product_id).shade %>
+              </a>    
+                  
+          </div>
       </div>
     </div>
 
 <%end%>
-
+</div>
 
 <a href="/photos">
   Go back
