--- a/app/views/product_templates/new_form.html.erb
+++ b/app/views/product_templates/new_form.html.erb
@@ -43,7 +43,7 @@
     <input type="text" id="shade" name="shade" class="form-control" value="<%= @product.try(:shade) %>">
   </div>
 
-  <button class="btn btn-block btn-outline-secondary">
+  <button class="btn btn-block btn-primary">
     Create product
   </button>
 </form>
